Fix Map border radius on Safari and IOS

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -38,6 +38,10 @@
 
 /* Styles leaflet */
 
+.leaflet-container {
+    z-index: 0;
+}
+
 .leaflet-popup-content-wrapper {
     background-color: var(--secondary-color);
     border-radius: 10px;
